# houston

./: .gitignore  CLAUDE.md  README.md  SETUP.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: index.html
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_changelogs.sql  003_changelog_summary.sql
src-tauri/src/: db.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: action_cmds.rs  ai_tools_cmds.rs  changelog_cmds.rs  claude_cmds.rs  dev_server_cmds.rs  diagnostics_cmds.rs  docker_cmds.rs  env_cmds.rs  history_cmds.rs  issue_cmds.rs  language_cmds.rs  mod.rs  package_cmds.rs  project_cmds.rs  settings_cmds.rs  stats_cmds.rs  system_cmds.rs  workspace_cmds.rs
src-tauri/src/demo/: data.rs  mod.rs
src-tauri/src/registry/: containers.rs  data.rs  detector.rs  mod.rs  types.rs
src-tauri/src/scanners/: ai_tools.rs  claude.rs  dev_servers.rs  diagnostics.rs  docker.rs  environment.rs  git.rs  languages.rs  mod.rs  outdated_cache.rs  packages.rs  path.rs  project_analysis.rs  system.rs  workspace.rs
src/hooks/: use-ai-tools.ts  use-app-stats.ts  use-changelogs.ts  use-claude-config.ts  use-collapsible-sections.ts  use-dev-servers.ts  use-diagnostics.ts  use-docker.ts  use-env-vars.ts  use-git-status.ts  use-global-packages.ts  use-issue-count.ts  use-issues-by-section.ts  use-issues.ts  use-languages.ts  use-onboarding.ts  use-path-entries.ts  use-port-map.ts  use-project-analysis.ts  use-scan-history.ts  use-settings.ts  use-smart-query.ts  use-system-info.ts  use-theme.ts  use-tool-mcp-servers.ts  use-update-checker.ts  use-version-mismatches.ts  use-visibility.ts  use-whats-new.ts  use-workspaces.ts
src/lib/: changelogs.ts  commands.ts  (+5 more)
(+38 files in other folders)
