[package]
name = "houston"
version = "0.1.0"
description = "Developer Environment Dashboard"
authors = ["Lennick Velez"]
edition = "2021"

[lib]
name = "houston_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process"] }
anyhow = "1"
log = "0.4"
thiserror = "2.0"
dirs = "6"
chrono = "0.4"
window-vibrancy = "0.5"
