[package]
name = "houston"
version = "0.5.0"
description = "Developer Environment Dashboard"
authors = ["Lennick Velez"]
edition = "2021"

[lib]
name = "houston_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process"] }
anyhow = "1"
log = "0.4"
thiserror = "2.0"
dirs = "6"
chrono = "0.4"
sysinfo = "0.33"
tauri-plugin-process = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.3"
rayon = "1.10"
walkdir = "2.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"

[target.'cfg(unix)'.dependencies]
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
